# mem

./: .gitignore  DATASETS_README.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  REAL_WORLD_IMPLEMENTATION.md  download_datasets.py  init.sh  load_datasets.py  pyproject.toml  quickstart.sh  requirements.txt  run_benchmark.py  run_benchmark.sh  test_benchmark.py  test_compressed_loader.py  test_memory_system.py  test_new_system.py
benchmark/: dataset_loader.py  harness.py
benchmark_results/: README.md  RESULTS.md  baseline_results.json  benchmark_20_messages.json  muninndb_results.json  openai_parser_results.json  trustgraph_results.json  vector_db_results.json
config/: baseline.json  knowledge_graph.json  manager.py  model.json  muninndb.json  openai_parser.json  trustgraph.json  vector_db.json  vector_store.json
context_managers/: baseline.py  memory_based.py  openai_parser.py
data/: compressed_dataset_loader.py
docker/: Dockerfile  docker-compose.yml
docs/: DATASETS_README.md  DOCUMENTATION.md  README.md
eval/: metrics.py
memory_stores/: base.py  knowledge_graph.py  muninndb.py  trustgraph.py  vector_db.py
scripts/: compress_prolong.py  coordinator.py  load_datasets.py  membench  membench-coordinator.sh  membench.sh  run_benchmark.py  server.py
src/membench/: __init__.py  __main__.py  cli.py  entrypoint.py
src/membench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/membench/benchmark/: __init__.py  dataset_loader.py  harness.py  runner.py
src/membench/config/: __init__.py  manager.py
src/membench/context_managers/: __init__.py  base.py  baseline.py  memory_based.py  openai_parser.py
src/membench/eval/: __init__.py
src/membench/memory_stores/: __init__.py  graphiti_store.py  knowledge_graph.py  letta_store.py  mem0_store.py  mempalace_store.py  muninndb.py  trustgraph.py  vector_db.py  zep_store.py
tests/: test_benchmark.py  test_new_system.py
